# haffman-archiver

./: CMakeLists.txt  README.md  main.cpp
Archiver/: Haffman.h
Archiver/Decoder/: Decoder.cpp  Decoder.h
Archiver/Encoder/: Encoder.cpp  Encoder.h
Archiver/Haffman/: HaffmanTree.cpp  HaffmanTree.h  Heap.cpp  Heap.h
Input/: BitReader.cpp  BitReader.h
Outpu/: BitWriter.cpp  BitWriter.h
Output/: BitWriter.h
